# shop

./: .cursorrules  .gitignore  .gitlab-ci.yml  .golangci.yml  GLOSSARY.md  Makefile  README.md  go.work  go.work.sum
admin/: .gitignore  Makefile  buf.gen.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
admin/docs/ADR/decisions/: 0002-auth-mode.md  0005-oathkeeper-auth.md
admin/ops/Helm/: Chart.yaml  README.md  values.yaml
admin/ops/Helm/templates/: authorization-policy.yaml  base.yaml  request-authentication.yaml
admin/ops/Makefile/: dev.mk  docker.mk
admin/ops/admin/: Chart.yaml  README.md  values.yaml
admin/ops/dockerfile/: Dockerfile  Dockerfile.dockerignore
admin/src/: manage.py  migration.py
admin/src/admin/: admin.py  asgi.py  auth_backends.py  dashboard.py  json_log_middleware.py  log_filters.py  ory_context.py  otel_logging.py  otel_setup.py  remote_user_middleware.py  settings.py  settings_migration.py  urls.py  views.py  wsgi.py
admin/src/domain/couriers/: __init__.py  apps.py  forms.py  urls.py  views.py
admin/src/domain/goods/: admin.py  models.py
admin/src/domain/offices/: README.md  __init__.py  admin.py  models.py
admin/src/domain/orders/: __init__.py  apps.py  forms.py  urls.py  views.py
admin/src/infrastructure/grpc/: __init__.py  delivery_client.py  oms_client.py
admin/src/templates/: base.html
admin/src/templates/admin/: index.html
admin/tests/: __init__.py  conftest.py
admin/tests/domain/couriers/: __init__.py  test_forms.py  test_views.py
admin/tests/infrastructure/grpc/: __init__.py  test_delivery_client.py
admin/tests/integration/: __init__.py  test_migrations.py
delivery/: .gitignore  Cargo.toml  Makefile  README.md  buf.yaml  build.rs
delivery/.cargo/: config.toml
delivery/docs/ADR/decisions/: 0001-init.md  0002-c4-system.md  0003-domain-structure.md  0004-dispatching-and-geolocation.md
delivery/domain/: README.md
delivery/domain/commands/v1/: commands.proto  responses.proto
delivery/domain/events/v1/: events.proto
delivery/migration/: Cargo.toml
delivery/migration/src/: lib.rs  m20260131_000001_create_couriers.rs  m20260131_000002_create_packages.rs  m20260131_000003_seed_couriers.rs  m20260131_000004_create_courier_location_history.rs  m20260205_000005_add_recipient_contacts_to_packages.rs  m20260311_000006_create_outbox_messages.rs  m20260311_000007_add_customer_phone_to_packages.rs  m20260316_000008_persist_courier_runtime_state.rs  m20260316_000009_drop_legacy_not_delivered_reason.rs
delivery/ops/Makefile/: proto.mk
delivery/ops/delivery/: .helmignore  Chart.yaml  README.md  values.yaml
delivery/ops/delivery/templates/: NOTES.txt  authorization-policy-proxy.yaml  authorization-policy.yaml  base.yaml  kafka-topics.yaml  request-authentication.yaml
delivery/ops/dockerfile/: Dockerfile  Dockerfile.dockerignore
delivery/ops/proto/: domain.buf.gen.yaml  proto-lock.json
delivery/src/: config.rs  di.rs  lib.rs  main.rs  test_support.rs
delivery/src/boundary/: mod.rs
delivery/src/boundary/ports/: courier_cache.rs  courier_repository.rs  handlers.rs  mod.rs
delivery/src/domain/: README.md  mod.rs
delivery/src/domain/model/: domain.delivery.commands.v1.rs  domain.delivery.common.v1.rs  domain.delivery.events.v1.rs  domain.delivery.queries.v1.rs  mod.rs
delivery/src/domain/ports/: courier_cache.rs  courier_repository.rs  event_publisher.rs  geolocation_service.rs  location_cache.rs  location_repository.rs  mod.rs  notification_service.rs  package_repository.rs
delivery/src/domain/services/: assignment_validation.rs  dispatch.rs  mod.rs
delivery/src/domain/value_objects/: location.rs
delivery/src/domain/vo/: location.rs  mod.rs
delivery/src/infrastructure/: geolocation.rs  mod.rs  osrm.rs
delivery/src/infrastructure/cache/: courier_redis.rs  location_redis.rs  mod.rs
delivery/src/infrastructure/messaging/: emulation_consumer.rs  kafka_publisher.rs  location_consumer.rs  mod.rs  outbox_forwarder.rs  tracking_pubsub.rs
delivery/src/infrastructure/notifications/: mod.rs  stub.rs
delivery/src/infrastructure/repository/: courier_postgres.rs  location_postgres.rs  mod.rs  outbox_postgres.rs  package_postgres.rs
delivery/src/infrastructure/rpc/: converters.rs  delivery.proto  mod.rs  server.rs
delivery/src/usecases/: mod.rs
delivery/src/usecases/accept_order/: mod.rs
delivery/src/usecases/assign_order/: mod.rs
delivery/src/usecases/courier/: mod.rs
delivery/src/usecases/deliver_order/: mod.rs
delivery/src/usecases/get_courier_pool/: mod.rs
delivery/src/usecases/get_package_pool/: mod.rs
delivery/src/usecases/package/: mod.rs
delivery/src/workers/: mod.rs  runner.rs
delivery/src/workers/courier/: mod.rs  (+2 more)
delivery/usecases/: README.md
delivery/usecases/assign_order/: README.md
delivery/usecases/deliver_order/: README.md
delivery/usecases/get_courier_pool/: README.md
delivery/usecases/get_package_pool/: README.md
delivery/usecases/register_courier/: README.md
delivery/usecases/update_courier_location/: README.md
geolocation/migration/: Cargo.toml
geolocation/migration/src/: lib.rs  m20260201_000001_create_courier_current_locations.rs  m20260201_000002_create_courier_location_history.rs  m20260201_000003_create_geofences.rs
pricer/: .gitignore  Cargo.toml  README.md  ROADMAP.md  buf.yaml  config.yaml  go.mod  go.sum
pricer/cmd/: main.go
pricer/internal/application/: cart_service.go  type.go
pricer/internal/di/: context_provider.go  wire.go  wire_gen.go
pricer/internal/domain/: cart.go  cart_total.go  errors.go
pricer/internal/loggeradapter/: adapter.go
pricer/internal/usecases/: README.md
pricer/ops/Makefile/: proto.mk
pricer/ops/dockerfile/: Dockerfile  Dockerfile.dockerignore
pricer/ops/pricer/: Chart.yaml  README.md  values.yaml
pricer/policies/discounts/: combination_discount.rego  quantity_discount.rego  total.rego
pricer/src/: config.rs  lib.rs  main.rs
pricer/src/usecases/: README.md
pricer/tests/bdd/: README.md
pricer/tests/fixtures/: cart_1.json  cart_2.json  cart_3.json  cart_4.json  cart_5.json
(+1042 files in other folders)
