[package]
name = "delivery"
version = "0.1.0"
edition = "2021"

[dependencies]
# gRPC / Protobuf
prost = "0.14.3"
prost-types = "0.14.3"
pbjson-types = "0.6"
tonic = "0.14.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# PostgreSQL with Sea-ORM
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
    "with-json"
] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Common utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "2"
rust_decimal = { version = "1", features = ["db-postgres"] }

# Pin time crate to version compatible with Rust 1.84 (0.3.46+ requires edition2024)
time = ">=0.3, <0.3.46"

[build-dependencies]
prost-build = "0.14.3"

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
migration = { path = "migration" }

