[package]
name = "delivery"
version = "0.1.0"
edition = "2021"

[dependencies]
# gRPC / Protobuf
prost = "0.14.3"
prost-types = "0.14.3"
pbjson-types = "0.9.0"
tonic = "0.14.3"
tonic-prost = "0.14.3"
tonic-health = "0.14.3"

# Async runtime
tokio = { version = "1.49.0", features = ["full"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# PostgreSQL with Sea-ORM
sea-orm = { version = "1.1.19", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
    "with-json"
] }
sea-orm-migration = "1.1.19"
migration = { path = "migration" }

# Redis
redis = { version = "1.0.4", features = ["tokio-comp", "connection-manager"] }

# Kafka (dynamic linking to system librdkafka for faster builds)
rdkafka = { version = "0.36", features = ["tokio", "dynamic-linking"] }

# Common utilities
uuid = { version = "1.21.0", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
async-trait = "0.1.89"
thiserror = "2.0.18"
rust_decimal = { version = "1", features = ["db-postgres"] }

# Configuration
dotenvy = "0.15.7"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Temporal SDK (pre-alpha, Git dependency)
temporalio-sdk = { git = "https://github.com/temporalio/sdk-core", package = "temporalio-sdk" }
temporalio-sdk-core = { git = "https://github.com/temporalio/sdk-core", package = "temporalio-sdk-core" }
temporalio-common = { git = "https://github.com/temporalio/sdk-core", package = "temporalio-common" }
temporalio-client = { git = "https://github.com/temporalio/sdk-core", package = "temporalio-client" }

# Additional dependencies for Temporal
futures-util = { version = "0.3", default-features = false }
anyhow = "1.0"
parking_lot = "0.12"
url = "2"

[build-dependencies]
prost-build = "0.14.3"
tonic-prost-build = "0.14.3"

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres", "redis"] }
migration = { path = "migration" }
mockall = "0.13"

[profile.release]
# lto = "thin"  # Enable for smaller binary & better perf, but 2-3x slower build
strip = true

