[package]
name = "pricer"
version = "0.1.0"
edition = "2021"
description = "Pricer service: tax and discount calculation for cart/order (Rust + OPA)"

[dependencies]
# Async runtime
tokio = { version = "1.49.0", features = ["full"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"

# Money / decimals
rust_decimal = { version = "1.40.0", features = ["serde"] }

# Errors
thiserror = "2.0.18"
anyhow = "1"

# Configuration
dotenvy = "0.15.7"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Common
uuid = { version = "1.21.0", features = ["v4", "serde"] }
async-trait = "0.1.89"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
strip = true
