[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm-migration = { version = "1.1.19", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }

# Pin time crate to version compatible with Rust 1.84 (0.3.46+ requires edition2024)
time = ">=0.3.47, <0.3.48"
